# argentum-v2

./: LICENSE  README.md  argentum_demo.ipynb  example.py  pyproject.toml
argentum/: __init__.py  statediff.py
