[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "argentum"
version = "0.1.0"
description = "State tracking for AI agents"
authors = [{name = "Marco Zaccaria Di Fraia", email = "marco.z.difraia@gmail.com"}]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/MarsZDF/argentum-v2"
Repository = "https://github.com/MarsZDF/argentum-v2"